homework/12_05/back-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: main-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
        appGeneral: fe-be
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 1180
