homework/12_05/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress
spec:
  rules:
    - host:
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: deployment-svc-fe
                port:
                  number: 80

          - path: "/api"
            pathType: Prefix
            backend:
              service:
                name: deployment-svc-be
                port:
                  number: 80
